# qtask

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  jtask.qrc
.github/workflows/: main.yml
res/: jtask.desktop  jtask.qrc  qtask.desktop  qtask.qrc
src/: aboutdialog.cpp  aboutdialog.hpp  agendadialog.cpp  agendadialog.hpp  allatoncekeywordsfinder.cpp  allatoncekeywordsfinder.hpp  async_task_loader.hpp  block_guard.hpp  config.hpp.in  configmanager.cpp  configmanager.hpp  date_time_parser.hpp  datetimedialog.cpp  datetimedialog.hpp  exec_on_exit.hpp  filteredtaskslistreader.cpp  filteredtaskslistreader.hpp  filterlineedit.cpp  filterlineedit.hpp  iterable_per_string.hpp  lambda_visitors.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  optionaldatetimeedit.cpp  optionaldatetimeedit.hpp  pereodic_async_executor.hpp  predicate_skip_iterator.hpp  qtutil.cpp  qtutil.hpp  recurrence_instance_data.hpp  recurring_task_template.cpp  recurring_task_template.hpp  recurringdialog.cpp  recurringdialog.hpp  recurringtasksmodel.cpp  recurringtasksmodel.hpp  settingsdialog.cpp  settingsdialog.hpp  split_string.hpp  (+42 more)
tests/: CMakeLists.txt  date_time_parser_test.cpp  pereodic_async_executor_test.cpp  predicate_skip_iterator_test.cpp  qt_base_test.hpp  qtutil_test.cpp  recurrence_instance_data_test.cpp  split_string_test.cpp  table_stencil_test.cpp  tabular_stencil_base_test.cpp  task_date_time_test.cpp  taskproperty_test.cpp  tasksstatuseswatcher_test.cpp  taskwarriorexecutor_test.cpp
